--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.5.0",
     "firebase": "^10.3.0",
     "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-image-magnify": "^2.7.4",
@@ -48,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-date-range": "^1.4.4",
+    "@types/react-datepicker": "^4.15.0"
   }
 }
